--- a/css/dialogic.css
+++ b/css/dialogic.css
@@ -3,7 +3,7 @@
 	--base-font-color: #000;
 	--active-color: blue;
 	--outline-color: blue;
-	--dialog-height: 200px;
+	--dialog-height: 100px;
 	--dialog-shift-top: calc(50% - (var(--dialog-height) / 2));
 	--dialog-z-index: 1;
 	--char-multiplication-sign: '\00D7';
@@ -31,6 +31,8 @@ dialog {
 	visibility: hidden;
 	opacity: 0;
 	transition: opacity 0.5s;
+	max-width: 60%;
+	position: fixed;
 }
 
 dialog[open] {
@@ -39,6 +41,13 @@ dialog[open] {
 }
 
 dialog>div {
+	display: grid;
+	grid-template-columns: auto 1fr;
+
+	grid-template-areas:
+		"icon title"
+		"icon description"
+	;
 	background: inherit;
 	position: relative;
 	padding: 1rem;
@@ -46,7 +55,24 @@ dialog>div {
 	z-index: calc(var(--dialog-z-index) + 1);
 }
 
-dialog>button {
+dialog .icon {
+	grid-column: icon;
+	float: left;
+	grid-row: 1 / 3;
+	margin-right: 1rem;
+}
+
+dialog .title {
+	grid-column: title;
+	margin: 0;
+}
+
+dialog .description {
+	grid-column: description;
+}
+
+dialog .closer {
+	grid-column: closer;
 	position: fixed;
 	text-decoration: none;
 	top: 0;
@@ -62,12 +88,12 @@ dialog>button {
 	color: transparent;
 }
 
-dialog>button:focus::before {
+dialog .closer:focus::before {
 	outline: none;
 	box-shadow: 0 0 0.2em 0.3em var(--outline-color);
 }
 
-dialog>button::before {
+dialog .closer::before {
 	font-family: Verdana, Geneva, sans-serif;
 	content: var(--char-multiplication-sign);
 	font-weight: bold;
@@ -87,8 +113,8 @@ dialog>button::before {
 	transition: border-color 0.5s, color 0.5s, box-shadow 0.1s;
 }
 
-dialog>button:focus::before,
-dialog>button:hover::before {
+dialog .closer:focus::before,
+dialog .closer:hover::before {
 	border-color: var(--body-background);
 	color: var(--active-color);
 }
