--- a/css/dialogic.css
+++ b/css/dialogic.css
@@ -77,9 +77,8 @@ dialog>div {
 	z-index: calc(var(--dialog-z-index) + 1);
 }
 
-dialog>div:last-child {
-	min-height: auto;
-	padding-top: 0;
+dialog>div>div {
+	grid-column: 1/3;
 }
 
 dialog .icon {
