--- a/css/dialogic.css
+++ b/css/dialogic.css
@@ -81,19 +81,19 @@ dialog>div>div {
 	grid-column: 1/3;
 }
 
-dialog .icon {
+dialog .u-featured {
 	grid-column: icon;
 	float: left;
 	grid-row: 1 / 3;
 	margin-right: 1rem;
 }
 
-dialog .title {
+dialog .p-name {
 	grid-column: title;
 	margin: 0;
 }
 
-dialog .description {
+dialog .p-summary {
 	grid-column: description;
 }
 
