--- a/css/dialogic.css
+++ b/css/dialogic.css
@@ -28,6 +28,7 @@ dialog {
 	display: block;
 	padding: 0;
 	top: var(--dialog-shift-top);
+	/* top: 10%; @todo : opravit zarovnání velkého dialogu (třeba toho s obrázkem (image, ne icon)) na extra malých monitorech */
 	visibility: hidden;
 	opacity: 0;
 	transition: opacity 0.5s;
